--- a/總統大選的社群網絡分析.ipynb
+++ b/總統大選的社群網絡分析.ipynb
@@ -8245,7 +8245,8 @@
     "### 統計值法\n",
     "- 直接用資料中的正負向分數\n",
     "- 優點是簡單，容易、但是缺點是很多資料沒有label\n",
-    "  - 像是PPT, Google Play 的留言資料都有分數，但FB的資料沒有qq"
+    "  - 像是PPT, Google Play 的留言資料都有分數，但FB的資料沒有qq\n",
+    "  Facebook 的資料不像 Ptt 的結構有推(Pos)或噓(Neg)，"
    ]
   },
   {
@@ -8426,7 +8427,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 衍生：Google翻譯"
+    "#### 衍生：Google翻譯\n",
+    "所以中文的文本要怎麼辦?"
    ]
   },
   {
@@ -12423,9 +12425,7 @@
      ]
     }
    ],
-   "source": [
-    "Facebook 的資料不像 Ptt 的結構有推(Pos)或噓(Neg)，"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
